--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="display" class="container">test</div>
     <script src="./index.js"></script>
+    <!-- <script src="./game.js"></script> -->
   </body>
 </html>
