--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div id="display" class="container">test</div>
+    <div>
+      <h3 id="health">8</h3>
+      <p id="key-hist"></p>
+    </div>
     <script src="./index.js"></script>
     <!-- <script src="./game.js"></script> -->
   </body>
