--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="display" class="container">test</div>
-    <div>
-      <h3 id="health">8</h3>
-      <p id="key-hist"></p>
+    <div class="center">
+      <div class="container">
+        <div class="nes-container is-dark with-title">
+          <p class="title">hangman</p>
+          <div id="display" class="container">test</div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>tries left:</h3>
+        <h3 id="health">8</h3>
+      </div>
+      <div class="container">
+        <p id="key-hist"></p>
+      </div>
     </div>
     <script src="./index.js"></script>
     <!-- <script src="./game.js"></script> -->
