--- a/index.html
+++ b/index.html
@@ -22,10 +22,46 @@
         </div>
       </div>
       <div class="container">
-        <h3>tries left:</h3>
-        <h3 id="health">8</h3>
+        <h3 id="health"></h3>
+        <img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        />
+        <img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        /><img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        /><img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        /><img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        /><img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        /><img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        /><img
+          src="Screen Shot 2020-09-23 at 4.10.07 PM.png "
+          class="heart"
+          alt=""
+        />
       </div>
-      <div class="container">
+
+      <div class="container-column">
+        <h3>keys pressed:</h3>
+
         <p id="key-hist"></p>
       </div>
     </div>
